--- a/package.json
+++ b/package.json
@@ -9,11 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/open-sans": "^0.2.3",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "@types/styled-components-react-native": "^5.2.1",
     "expo": "~48.0.9",
+    "expo-device": "~5.2.1",
+    "expo-font": "~11.1.1",
+    "expo-screen-orientation": "~5.1.1",
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "5.1.4",
+    "moment": "^2.29.4",
     "react": "18.2.0",
-    "react-native": "0.71.4"
+    "react-native": "0.71.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-modalize": "^2.1.1",
+    "react-native-portalize": "^1.0.7",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-transformer": "^1.0.0",
+    "react-native-toast-message": "^2.1.6",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
